--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         yarn build
         echo 'heu.today' > dist/CNAME
 
-    - name: Deploy Build
+    - name: Deploy to Github Pages
       uses: docker://peaceiris/gh-pages:v2
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -32,3 +32,8 @@ jobs:
         PUBLISH_DIR: ./dist
       with:
         emptyCommits: false
+    
+    - name: Deploy to Cloudflare Workers Sites
+      uses: cloudflare/wrangler-action@1.1.0
+      with:
+        apiToken: ${{ secrets.CF_WORKERS_TOKEN }}
