--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,29 +11,30 @@ jobs:
     runs-on: ubuntu-18.04
 
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Node
-      uses: actions/setup-node@v1
-      with:
-        node-version: '10.x'
-
-    - name: Install and Build
-      run: |
-        yarn install
-        yarn build
-        echo 'heu.today' > dist/CNAME
-
-    - name: Deploy to Github Pages
-      uses: docker://peaceiris/gh-pages:v2
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        PUBLISH_BRANCH: gh-pages
-        PUBLISH_DIR: ./dist
-      with:
-        emptyCommits: false
-    
-    - name: Deploy to Cloudflare Workers Sites
-      uses: cloudflare/wrangler-action@1.1.0
-      with:
-        apiToken: ${{ secrets.CF_WORKERS_TOKEN }}
+      - name: Checkout
+        uses: actions/checkout@v2
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '10.x'
+      
+      - name: Install and Build
+        run: |
+          yarn install
+          yarn build
+          echo 'heu.today' > dist/CNAME
+      
+      - name: Deploy to Github Pages
+        uses: docker://peaceiris/gh-pages:v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PUBLISH_BRANCH: gh-pages
+          PUBLISH_DIR: ./dist
+        with:
+          emptyCommits: false
+      
+      - name: Deploy to Cloudflare Workers Sites
+        uses: cloudflare/wrangler-action@1.1.0
+        with:
+          apiToken: ${{ secrets.CF_WORKERS_TOKEN }}
