--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: GitHub Actions Build and Deploy
+name: Build and Deploy
 
 on:
   push:
@@ -18,6 +18,22 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '10.x'
+      
+      - name: Cache node_modules
+        uses: actions/cache@v1
+        env:
+          cache-name: hexo-node-modules
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }}
+      
+      - name: Cache workers-site/node_modules
+        uses: actions/cache@v1
+        env:
+          cache-name: workers-site-node-modules
+        with:
+          path: workers-site/node_modules
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('workers-site/package-lock.json') }}
       
       - name: Install and Build
         run: |
