--- a/.github/workflows/worker.yml
+++ b/.github/workflows/worker.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Deploy Worker
 
 on:
   push:
@@ -39,15 +39,6 @@ jobs:
         run: |
           npm install
           npm run build
-      
-      - name: Deploy to Github Pages
-        uses: docker://peaceiris/gh-pages:v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: ./dist
-        with:
-          emptyCommits: false
       
       - name: Deploy to Cloudflare Workers Sites
         uses: cloudflare/wrangler-action@1.1.0
